Offset margin to the left to avoid shifting qr right

--- a/html-templates/assets/css/custom.css
+++ b/html-templates/assets/css/custom.css
@@ -47,7 +47,7 @@ a {
 	position: relative;
 }
 .qr-code-img-border {
-	padding: 5px;
+	margin-left: -5px; /* offset to avoid shifting qr right with boarder */
 	display: inline-block;
 	border-radius: 25px;
 	border: 5px dashed var(--bc-primary);
